8159860: JavaFX Path drawing appears to leak native memory

Reviewed-by: kcr